fix image overflow

--- a/src/app/pages/challenge-details-page/challenge-details-page.component.scss
+++ b/src/app/pages/challenge-details-page/challenge-details-page.component.scss
@@ -4,6 +4,7 @@
 	position: relative;
 	max-height: 30vh;
 	width: 100vw;
+	overflow: hidden;
 
 	img {
 		display: block;
